FullSb1-27-apr-15/src/objects/Employment_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Pre_Graduation_Internship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the student continuing with an internship which they were doing pre-graduation?</description>
        <inlineHelpText>Was the student doing their internship before they graduated?</inlineHelpText>
        <label>Continuing Internship?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Company_Name__c</fullName>
        <description>Populated from the contact</description>
        <inlineHelpText>If you cannot find the company name using the lookup in the previous field, please enter the name of the company in here and then move onto the &apos;Previous Job Title&apos; question.</inlineHelpText>
        <label>Previous Company (not in HCP)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Company__c</fullName>
        <description>Populated from the contact</description>
        <inlineHelpText>Use this lookup field to see if the company exists as an Account in HCP Salesforce. If found, please select and move on to the &apos;Previous Job Title&apos; question. If not found, please enter the company name in the field below.</inlineHelpText>
        <label>Previous Company (CR Account in HCP?)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employment Surveys</relationshipLabel>
        <relationshipName>Employment_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Start_Date__c</fullName>
        <description>Populated from the contact</description>
        <label>Previous Job Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Title__c</fullName>
        <description>Populated from the contact</description>
        <label>Previous Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retroactively_Triggers_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used for triggering workflow rule field updates on records which already exist</description>
        <label>Retroactively Triggers Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salary_if_any_in_USD__c</fullName>
        <label>Salary in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_of_Information__c</fullName>
        <label>Source of Information</label>
        <picklist>
            <picklistValues>
                <fullName>Student filled out survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student spoke to CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student spoke to CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS found out through Linked In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent Solutions Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_of_Job_Lead__c</fullName>
        <label>Source of Job Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Company attending COH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Network on Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Started_Job__c</fullName>
        <description>For reporting purposes and CS dashboards, has student actually started their job already</description>
        <formula>if( 

ISPICKVAL( Are_you_currently_looking_for_a_job__c , &apos;I have already accepted an offer&apos;)
&amp;&amp;
 NOT(ISBLANK(Employment_Start_Date__c))
&amp;&amp;
Employment_Start_Date__c &lt;  TODAY() ,

&apos;Yes&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Started Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>When this is set to &quot;Publish&quot; and Are you looking for a job? is NOT equal to &quot;Have an offer but undecided&quot; this Employment Survey will be processed into the HCP system</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Publish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student_Contact_ID__c</fullName>
        <formula>Student__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <formula>if(Student__r.RecordTypeId = &quot;012U00000009QX9&quot; , &quot;Alumni&quot;, &quot;Student&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment Surveys</relationshipLabel>
        <relationshipName>Employment_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TS_Application__c</fullName>
        <inlineHelpText>To view all of this students TS Applications, click the lookup button and enter &apos;APP&apos; into the search bar,then click &apos;Go&apos;. If you have selected a TS Application, please move onto the Company lookup question below.</inlineHelpText>
        <label>TS Application Lookup</label>
        <referenceTo>ts2__Application__c</referenceTo>
        <relationshipLabel>Employment Surveys</relationshipLabel>
        <relationshipName>Employment_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TS_Internship_Application__c</fullName>
        <description>Lookup value for existing TS applications. To be used for the internships section of Employment Survey</description>
        <inlineHelpText>To view all of this students TS internship Applications, click the lookup button and enter &apos;APP&apos; into the search bar,then click &apos;Go&apos;. If you have selected a TS internship Application, please move onto the Company lookup question below.</inlineHelpText>
        <label>TS Internship Application Lookup</label>
        <referenceTo>ts2__Application__c</referenceTo>
        <relationshipLabel>Employment Surveys (TS Interview Application)</relationshipLabel>
        <relationshipName>Employment_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_3_Job_Sources__c</fullName>
        <label>Top 3 Job Sources</label>
        <picklist>
            <picklistValues>
                <fullName>COH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR&apos;s TS Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Major__c</fullName>
        <description>Populated from the contact</description>
        <label>Undergraduate Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_you_doing_now__c</fullName>
        <label>What are your plans post-graduation?</label>
        <picklist>
            <picklistValues>
                <fullName>Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returning to my previous employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working for my family business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting a business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working as an intern at a company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponing job search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – please specify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working in the job listed above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Authorisation_Status_for_Offer__c</fullName>
        <label>Work Authorisation Status for Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Self_Initiated_Job_Apps_to_Date__c</fullName>
        <label># of Self-Initiated Job Apps to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employment Survey</label>
    <nameField>
        <displayFormat>ES-{YYYY}{MM}-{00000}</displayFormat>
        <label>Employment Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Family_Business_or_Starting_a_Business</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( What_are_you_doing_now__c ,&quot;Working for my family business&quot;) ||
ISPICKVAL( What_are_you_doing_now__c ,&quot;Starting a business&quot;)|| 
(ISPICKVAL( What_are_you_doing_now__c ,&quot;Working as an intern at a company&quot;)&amp;&amp; ISBLANK( TS_Internship_Application__c )) )
&amp;&amp;
(
ISBLANK( Start_Date__c )||
ISBLANK( Salary_if_any_in_USD__c )||
ISBLANK( Job_Title_Bus__c )||
(ISBLANK( Company_Bus__c )&amp;&amp;ISBLANK( Name_of_Bus__c ))
)
&amp;&amp;
ISPICKVAL(Status__c , &apos;Publish&apos;)</errorConditionFormula>
        <errorDisplayField>Name_of_Bus__c</errorDisplayField>
        <errorMessage>You are in &apos;publish&apos; mode. You have selected &apos;Family Business&apos;, &apos;Internship&apos; or &apos;Starting a Business&apos; in &apos;What are you doing now?&apos;. You must complete the fields in this section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Family_Business_or_Starting_a_Business2</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
	NOT(ISPICKVAL( What_are_you_doing_now__c ,&quot;Starting a business&quot;)),
	NOT(ISPICKVAL( What_are_you_doing_now__c ,&quot;Working for my family business&quot;)),
        NOT(ISPICKVAL( What_are_you_doing_now__c ,&quot;Working as an intern at a company&quot;)),
		OR(NOT(ISBLANK( Company_Bus__c )),
			NOT(ISBLANK( Name_of_Bus__c )) ,
			NOT(ISBLANK(TEXT( Industry_Bus__c ))),
			NOT(ISBLANK( City_Bus__c )),
			NOT(ISBLANK(TEXT( Type__c ))),
			NOT(ISBLANK( Start_Date__c )),
			NOT(ISBLANK( Salary_if_any_in_USD__c )),
			NOT(ISBLANK( Job_Title_Bus__c ))))</errorConditionFormula>
        <errorDisplayField>Company_Bus__c</errorDisplayField>
        <errorMessage>The student has not received a job offer based on your answer to &apos;What are you doing now?&apos; so the job detail fields should remain blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Family_or_Non_Family_Offer</fullName>
        <active>true</active>
        <description>Cannot enter job details into both the Family/Intern offer section as well as the standard offer section.</description>
        <errorConditionFormula>OR( NOT(ISBLANK( Company_Bus__c )) ,
    NOT(ISBLANK( Name_of_Bus__c )))
&amp;&amp;

OR( NOT(ISBLANK( Offer_Company_Name__c )) ,
    NOT(ISBLANK( Offer_Company__c )))</errorConditionFormula>
        <errorMessage>You cannot enter job offer details in both the standard job offer details section and the family/starting/internship offer section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_of_business_lookup_OR_text</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Name_of_Bus__c )) &amp;&amp;
NOT(ISBLANK( Company_Bus__c  ))</errorConditionFormula>
        <errorDisplayField>Company_Bus__c</errorDisplayField>
        <errorMessage>Please select the company name from this field or enter in the field below, but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_TS_Company_Details_are_mandatory</fullName>
        <active>true</active>
        <description>Non TS</description>
        <errorConditionFormula>AND(
   OR (NOT(ISBLANK( Offer_Company_Name__c )) ,
       NOT(ISBLANK( Offer_Company__c ))) ,
   ISBLANK(TEXT( Industry__c )) ,
   ISPICKVAL(Status__c , &apos;Publish&apos;)
   )</errorConditionFormula>
        <errorDisplayField>Ownership_Type__c</errorDisplayField>
        <errorMessage>You are in &apos;publish&apos; mode. Please complete the Company Ownership Type and Industry fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_TS_Company_or_Name_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	ISBLANK( TS_Application__c ) ,
	Can_t_find_on_TS__c =FALSE,
	NOT(ISBLANK( Job_Title__c )),
	ISBLANK( Offer_Company__c ),
	ISBLANK( Offer_Company_Name__c ))
&amp;&amp;
ISPICKVAL(Status__c , &apos;Publish&apos;)</errorConditionFormula>
        <errorDisplayField>Offer_Company__c</errorDisplayField>
        <errorMessage>You are in &apos;publish&apos; mode. You have entered a Job Title but no company name. Please enter the company name to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_TS_Job_Title_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	ISBLANK( TS_Application__c ) ,
	Can_t_find_on_TS__c =FALSE,
		OR(
			NOT(ISBLANK( Offer_Company__c )),
			NOT(ISBLANK( Offer_Company_Name__c ))),
	ISBLANK( Job_Title__c ))
&amp;&amp;
ISPICKVAL(Status__c , &apos;Publish&apos;)</errorConditionFormula>
        <errorDisplayField>Job_Title__c</errorDisplayField>
        <errorMessage>You are in &apos;publish&apos; mode. You have entered a company name but no Job Title, please enter the job title to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_TS_Offer_Job_Details_are_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK( Job_Title__c) ),
OR(
ISBLANK( Job_City__c  ),
ISBLANK(TEXT( Job_Function__c ) ),
ISBLANK( TEXT( Job_Industry__c  ))
))
&amp;&amp;
ISPICKVAL(Status__c , &apos;Publish&apos;)</errorConditionFormula>
        <errorDisplayField>Job_Function__c</errorDisplayField>
        <errorMessage>You are in &apos;publish&apos; mode. Please complete all Job details (City, Job Function, Job Industry)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offer_Company_lookup_field_or_text</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Offer_Company__c )) &amp;&amp;
NOT(ISBLANK( Offer_Company_Name__c ))</errorConditionFormula>
        <errorDisplayField>Offer_Company__c</errorDisplayField>
        <errorMessage>Please select the company name from this field or enter in the field below, but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offer_Dates_Hierachy</fullName>
        <active>true</active>
        <description>Accepted date cannot be greater than Start Date and Offer Date cannot be greater than Accepted Date.</description>
        <errorConditionFormula>(Offer_Accepted_Date__c &gt;  Employment_Start_Date__c
||
Offer_Received_Date__c &gt;  Offer_Accepted_Date__c)</errorConditionFormula>
        <errorDisplayField>Offer_Received_Date__c</errorDisplayField>
        <errorMessage>Offer Accepted Date must be before Employment Start Date.
Offer Received Date must be before the Offer Accepted Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offer_Undecided_Draft_Mode</fullName>
        <active>true</active>
        <description>Undecided job offers must be saved in &apos;draft&apos; mode.</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;publish&apos; ) 
&amp;&amp; 
ISPICKVAL( Are_you_currently_looking_for_a_job__c , &apos;have an offer but undecided&apos;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You cannot publish a job offer whilst it is undecided. Please select status = draft. When the student has decided to accept or reject the offer, please return and edit the employment survey with updated info and change status to &apos;publish&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offer_dates_mandatory</fullName>
        <active>true</active>
        <description>Offer receive and accept dates are mandatory if entering job offer</description>
        <errorConditionFormula>AND( 
OR( 
NOT(ISBLANK( TS_Application__c )) , 
NOT(ISBLANK( Offer_Company__c )) , 
NOT(ISBLANK( Offer_Company_Name__c )) 
) , 
OR( 
ISBLANK( Offer_Accepted_Date__c ) , 
ISBLANK( Offer_Received_Date__c )
) 
)
&amp;&amp;
ISPICKVAL(Status__c , &apos;Publish&apos;)
&amp;&amp;
ISPICKVAL(What_are_you_doing_now__c , &apos;I have already accepted an offer&apos;)</errorConditionFormula>
        <errorDisplayField>Offer_Received_Date__c</errorDisplayField>
        <errorMessage>You are in &apos;publish&apos; mode. If you are entering a job offer, you must complete the job offer date fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Previous_Job_Company_lookup_OR_text</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Previous_Job_Company__c )) &amp;&amp;
NOT(ISBLANK ( Previous_Job_Company_Name__c ))</errorConditionFormula>
        <errorDisplayField>Previous_Job_Company__c</errorDisplayField>
        <errorMessage>Please select the company name from this field or enter in the field below, but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>What_are_you_doing_now_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(What_are_you_doing_now__c ))
&amp;&amp;
ISPICKVAL(Status__c , &apos;Publish&apos;)</errorConditionFormula>
        <errorDisplayField>What_are_you_doing_now__c</errorDisplayField>
        <errorMessage>You are in &apos;publish&apos; mode. Please select an answer for this question.</errorMessage>
    </validationRules>
</CustomObject>